[MacOSX] Media crash NSInvalidArgumentException playing some video

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • Environment:

      OS X 10.9.5
      jdk-9+145

      While surfing around testing WebView, I ran into a media crash on Mac OS X 10.9.5 with NSInvalidArgumentException. No hs_err log file was generated, but I have attached the Mac crash log.

      Steps to reproduce:

      $ cd rt
      $ java -cp apps/toys/Hello/dist/Hello.jar hello.HelloWebView http://www.cnn.com/videos/politics/2016/11/09/the-simpsons-trump-prediction-orig-vstan.cnn

      It will start playing the video and then crash with the following error:

      2016-12-01 14:00:08.937 java[88162:507] -[NSNull longValue]: unrecognized selector sent to instance 0x7fff7cc84240
      2016-12-01 14:00:08.938 java[88162:507] An uncaught exception was raised
      2016-12-01 14:00:08.938 java[88162:507] -[NSNull longValue]: unrecognized selector sent to instance 0x7fff7cc84240
      2016-12-01 14:00:08.939 java[88162:507] (
      0 CoreFoundation 0x00007fff9269e25c __exceptionPreprocess + 172
      1 libobjc.A.dylib 0x00007fff948f8e75 objc_exception_throw + 43
      2 CoreFoundation 0x00007fff926a112d -[NSObject(NSObject) doesNotRecognizeSelector:] + 205
      3 CoreFoundation 0x00007fff925fc272 ___forwarding___ + 1010
      4 CoreFoundation 0x00007fff925fbdf8 _CF_forwarding_prep_0 + 120
      5 libjfxmedia_avf.dylib 0x00000001422ae478 -[AVFMediaPlayer observeValueForKeyPath:ofObject:change:context:] + 218
      6 Foundation 0x00007fff8d33a998 -[NSKeyValueObservance observeValueForKeyPath:ofObject:change:context:] + 405
      7 Foundation 0x00007fff8d33a998 -[NSKeyValueObservance observeValueForKeyPath:ofObject:change:context:] + 405
      8 Foundation 0x00007fff8d2c9548 NSKeyValueNotifyObserver + 387
      9 Foundation 0x00007fff8d2c8718 NSKeyValueDidChange + 453
      10 Foundation 0x00007fff8d2cd206 -[NSObject(NSKeyValueObserverNotification) didChangeValueForKey:] + 118
      11 AVFoundation 0x00007fff9197be4f -[AVPlayer didChangeValueForKey:] + 48
      12 AVFoundation 0x00007fff919d6237 -[AVPlayer _coordinateWithRemovalOfItem:] + 240
      13 AVFoundation 0x00007fff91992331 -[AVPlayer _removeItem:] + 137
      14 AVFoundation 0x00007fff9197cd99 -[AVPlayer _insertPlaybackItemOfItem:inPlayerQueueAfterPlaybackItemOfItem:] + 96
      15 AVFoundation 0x00007fff919d5e40 __62-[AVPlayer _createPlayer:forItem:prepareIt:completionHandler:]_block_invoke + 1217
      16 libdispatch.dylib 0x00007fff92d321bb _dispatch_call_block_and_release + 12
      17 libdispatch.dylib 0x00007fff92d2f28d _dispatch_client_callout + 8
      18 libdispatch.dylib 0x00007fff92d36ef0 _dispatch_main_queue_callback_4CF + 333
      19 CoreFoundation 0x00007fff926054f9 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 9
      20 CoreFoundation 0x00007fff925c0714 __CFRunLoopRun + 1636
      21 CoreFoundation 0x00007fff925bfe75 CFRunLoopRunSpecific + 309
      22 HIToolbox 0x00007fff98648a0d RunCurrentEventLoopInMode + 226
      23 HIToolbox 0x00007fff986487b7 ReceiveNextEventCommon + 479
      24 HIToolbox 0x00007fff986485bc _BlockUntilNextEventMatchingListInModeWithFilter + 65
      25 AppKit 0x00007fff8fe0d24e _DPSNextEvent + 1434
      26 AppKit 0x00007fff8fe0c89b -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 122
      27 AppKit 0x00007fff8fe0099c -[NSApplication run] + 553
      28 libglass.dylib 0x00000001397d4822 -[GlassApplication runLoop:] + 1858
      29 Foundation 0x00007fff8d32375e __NSThreadPerformPerform + 229
      30 CoreFoundation 0x00007fff925cf5b1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      31 CoreFoundation 0x00007fff925c0c62 __CFRunLoopDoSources0 + 242
      32 CoreFoundation 0x00007fff925c03ef __CFRunLoopRun + 831
      33 CoreFoundation 0x00007fff925bfe75 CFRunLoopRunSpecific + 309
      34 java 0x000000010f296e62 CreateExecutionEnvironment + 867
      35 java 0x000000010f293301 JLI_Launch + 1449
      36 java 0x000000010f2925d7 main + 283
      37 java 0x000000010f2924b4 start + 52
      )
      2016-12-01 14:00:08.939 java[88162:507] *** Terminating app due to uncaught exception 'NSInvalidArgumentException', reason: '-[NSNull longValue]: unrecognized selector sent to instance 0x7fff7cc84240'
      *** First throw call stack:
      (
      0 CoreFoundation 0x00007fff9269e25c __exceptionPreprocess + 172
      1 libobjc.A.dylib 0x00007fff948f8e75 objc_exception_throw + 43
      2 CoreFoundation 0x00007fff926a112d -[NSObject(NSObject) doesNotRecognizeSelector:] + 205
      3 CoreFoundation 0x00007fff925fc272 ___forwarding___ + 1010
      4 CoreFoundation 0x00007fff925fbdf8 _CF_forwarding_prep_0 + 120
      5 libjfxmedia_avf.dylib 0x00000001422ae478 -[AVFMediaPlayer observeValueForKeyPath:ofObject:change:context:] + 218
      6 Foundation 0x00007fff8d33a998 -[NSKeyValueObservance observeValueForKeyPath:ofObject:change:context:] + 405
      7 Foundation 0x00007fff8d33a998 -[NSKeyValueObservance observeValueForKeyPath:ofObject:change:context:] + 405
      8 Foundation 0x00007fff8d2c9548 NSKeyValueNotifyObserver + 387
      9 Foundation 0x00007fff8d2c8718 NSKeyValueDidChange + 453
      10 Foundation 0x00007fff8d2cd206 -[NSObject(NSKeyValueObserverNotification) didChangeValueForKey:] + 118
      11 AVFoundation 0x00007fff9197be4f -[AVPlayer didChangeValueForKey:] + 48
      12 AVFoundation 0x00007fff919d6237 -[AVPlayer _coordinateWithRemovalOfItem:] + 240
      13 AVFoundation 0x00007fff91992331 -[AVPlayer _removeItem:] + 137
      14 AVFoundation 0x00007fff9197cd99 -[AVPlayer _insertPlaybackItemOfItem:inPlayerQueueAfterPlaybackItemOfItem:] + 96
      15 AVFoundation 0x00007fff919d5e40 __62-[AVPlayer _createPlayer:forItem:prepareIt:completionHandler:]_block_invoke + 1217
      16 libdispatch.dylib 0x00007fff92d321bb _dispatch_call_block_and_release + 12
      17 libdispatch.dylib 0x00007fff92d2f28d _dispatch_client_callout + 8
      18 libdispatch.dylib 0x00007fff92d36ef0 _dispatch_main_queue_callback_4CF + 333
      19 CoreFoundation 0x00007fff926054f9 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 9
      20 CoreFoundation 0x00007fff925c0714 __CFRunLoopRun + 1636
      21 CoreFoundation 0x00007fff925bfe75 CFRunLoopRunSpecific + 309
      22 HIToolbox 0x00007fff98648a0d RunCurrentEventLoopInMode + 226
      23 HIToolbox 0x00007fff986487b7 ReceiveNextEventCommon + 479
      24 HIToolbox 0x00007fff986485bc _BlockUntilNextEventMatchingListInModeWithFilter + 65
      25 AppKit 0x00007fff8fe0d24e _DPSNextEvent + 1434
      26 AppKit 0x00007fff8fe0c89b -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 122
      27 AppKit 0x00007fff8fe0099c -[NSApplication run] + 553
      28 libglass.dylib 0x00000001397d4822 -[GlassApplication runLoop:] + 1858
      29 Foundation 0x00007fff8d32375e __NSThreadPerformPerform + 229
      30 CoreFoundation 0x00007fff925cf5b1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      31 CoreFoundation 0x00007fff925c0c62 __CFRunLoopDoSources0 + 242
      32 CoreFoundation 0x00007fff925c03ef __CFRunLoopRun + 831
      33 CoreFoundation 0x00007fff925bfe75 CFRunLoopRunSpecific + 309
      34 java 0x000000010f296e62 CreateExecutionEnvironment + 867
      35 java 0x000000010f293301 JLI_Launch + 1449
      36 java 0x000000010f2925d7 main + 283
      37 java 0x000000010f2924b4 start + 52
      )
      libc++abi.dylib: terminating with uncaught exception of type NSException
      Abort trap: 6

            Assignee:
            Alexander Matveev
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: