8170630: [MacOSX] Media crash NSInvalidArgumentException playing some video

Reviewed-by: ddehaven